--- a/src/modules/blog/containers/home/home.component.html
+++ b/src/modules/blog/containers/home/home.component.html
@@ -1,1 +1,18 @@
-<sb-clean-blog-header backgroundImage='url("assets/img/home-bg.jpg")' heading="Clean Blog" subHeading="Blog Theme by Start Bootstrap" [siteHeading]="true"></sb-clean-blog-header>
+<sb-layout-blog
+    ><sb-clean-blog-header backgroundImage='url("assets/img/home-bg.jpg")' heading="Clean Blog" subHeading="Blog Theme by Start Bootstrap" [siteHeading]="true"></sb-clean-blog-header
+    ><ng-container *ngIf="posts"
+        ><div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-md-10 mx-auto">
+                    <div class="post-preview" *ngFor="let post of posts">
+                        <a [routerLink]="post.slug"
+                            ><h2 class="post-title">{{post.heading}}</h2>
+                            <h3 class="post-subtitle">{{post.subHeading}}</h3></a
+                        >
+                        <p class="post-meta">{{post.meta}}</p>
+                    </div>
+                </div>
+            </div>
+        </div></ng-container
+    ></sb-layout-blog
+>
