--- a/src/modules/error/containers/error-404/error-404.component.html
+++ b/src/modules/error/containers/error-404/error-404.component.html
@@ -5,7 +5,7 @@
                 <div class="text-center mt-4">
                     <img class="mb-4 img-error" src="assets/img/error-404-monochrome.svg" />
                     <p class="lead">This requested URL was not found on this server.</p>
-                    <a routerLink="/dashboard"><fa-icon class="mr-1" [icon]='["fas", "arrow-left"]'></fa-icon>Return to Dashboard</a>
+                    <a routerLink="/"><fa-icon class="mr-1" [icon]='["fas", "arrow-left"]'></fa-icon>Return Home</a>
                 </div>
             </div>
         </div>
