--- a/src/modules/error/containers/error-404/error-404.component.pug
+++ b/src/modules/error/containers/error-404/error-404.component.pug
@@ -5,6 +5,6 @@ sb-layout-error
                 .text-center.mt-4
                     img.mb-4.img-error(src='assets/img/error-404-monochrome.svg')
                     p.lead This requested URL was not found on this server.
-                    a(routerLink='/dashboard')
+                    a(routerLink='/')
                         fa-icon.mr-1([icon]='["fas", "arrow-left"]')
-                        | Return to Dashboard
+                        | Return Home
