--- a/src/modules/error/containers/error-500/error-500.component.html
+++ b/src/modules/error/containers/error-500/error-500.component.html
@@ -5,7 +5,7 @@
                 <div class="text-center mt-4">
                     <h1 class="display-1">500</h1>
                     <p class="lead">Internal Server Error</p>
-                    <a routerLink="/dashboard"><fa-icon class="mr-1" [icon]='["fas", "arrow-left"]'></fa-icon>Return to Dashboard</a>
+                    <a routerLink="/"><fa-icon class="mr-1" [icon]='["fas", "arrow-left"]'></fa-icon>Return Home</a>
                 </div>
             </div>
         </div>
