--- a/src/modules/error/containers/error-500/error-500.component.pug
+++ b/src/modules/error/containers/error-500/error-500.component.pug
@@ -5,6 +5,6 @@ sb-layout-error
                 .text-center.mt-4
                     h1.display-1 500
                     p.lead Internal Server Error
-                    a(routerLink='/dashboard')
+                    a(routerLink='/')
                         fa-icon.mr-1([icon]='["fas", "arrow-left"]')
-                        | Return to Dashboard
+                        | Return Home
