--- a/src/modules/navigation/containers/top-nav/top-nav.component.html
+++ b/src/modules/navigation/containers/top-nav/top-nav.component.html
@@ -4,7 +4,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item"><a class="nav-link" routerLink="/">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
+                <li class="nav-item"><a class="nav-link" routerLink="/about">About</a></li>
             </ul>
         </div>
     </div>
