--- a/src/modules/navigation/containers/top-nav/top-nav.component.pug
+++ b/src/modules/navigation/containers/top-nav/top-nav.component.pug
@@ -16,4 +16,4 @@ nav.navbar.navbar-expand-lg.navbar-light.fixed-top#mainNav
                 li.nav-item
                     a.nav-link(routerLink='/') Home
                 li.nav-item
-                    a.nav-link(href='/about') About
+                    a.nav-link(routerLink='/about') About
