--- a/src/modules/blog/containers/post/post.component.html
+++ b/src/modules/blog/containers/post/post.component.html
@@ -1,1 +1,1 @@
-<sb-layout-blog><sb-clean-blog-header backgroundImage='url("assets/img/post-bg.jpg")' heading="Clean Blog" subHeading="Blog Theme by Start Bootstrap" meta="Posted by Start Bootstrap on August 24, 2019"></sb-clean-blog-header></sb-layout-blog>
+<sb-layout-blog *ngIf="(post$ | async) as post;"><sb-clean-blog-header [backgroundImage]="post.backgroundImage" [heading]="post.heading" [subHeading]="post.subHeading" [meta]="post.meta"></sb-clean-blog-header></sb-layout-blog>
