--- a/src/modules/blog/containers/post/post.component.pug
+++ b/src/modules/blog/containers/post/post.component.pug
@@ -1,7 +1,9 @@
-sb-layout-blog
+sb-layout-blog(
+    *ngIf='(post$ | async) as post;',
+)
     sb-clean-blog-header(
-        backgroundImage='url("assets/img/post-bg.jpg")',
-        heading='Clean Blog',
-        subHeading='Blog Theme by Start Bootstrap',
-        meta='Posted by Start Bootstrap on August 24, 2019'
+        [backgroundImage]='post.backgroundImage',
+        [heading]='post.heading',
+        [subHeading]='post.subHeading',
+        [meta]='post.meta'
     )
