--- a/src/modules/error/containers/error-401/error-401.component.pug
+++ b/src/modules/error/containers/error-401/error-401.component.pug
@@ -6,6 +6,6 @@ sb-layout-error
                     h1.display-1 401
                     p.lead Unauthorized
                     p Access to this resource is denied.
-                    a(routerLink='/dashboard')
+                    a(routerLink='/')
                         fa-icon.mr-1([icon]='["fas", "arrow-left"]')
-                        | Return to Dashboard
+                        | Return Home
