using live posts for home

--- a/src/modules/blog/containers/home/home.component.pug
+++ b/src/modules/blog/containers/home/home.component.pug
@@ -6,7 +6,7 @@ sb-layout-blog
         [siteHeading]='true'
     )
     ng-container(
-        *ngIf='posts'
+        *ngIf='posts$ | async as posts'
     )
         .container
             .row
