--- a/src/modules/blog/containers/home/home.component.html
+++ b/src/modules/blog/containers/home/home.component.html
@@ -1,6 +1,6 @@
 <sb-layout-blog
     ><sb-clean-blog-header backgroundImage='url("assets/img/home-bg.jpg")' heading="Clean Blog" subHeading="Blog Theme by Start Bootstrap" [siteHeading]="true"></sb-clean-blog-header
-    ><ng-container *ngIf="posts"
+    ><ng-container *ngIf="posts$ | async as posts"
         ><div class="container">
             <div class="row">
                 <div class="col-lg-8 col-md-10 mx-auto">
