first pass integrating login

--- a/src/modules/auth/containers/login/login.component.html
+++ b/src/modules/auth/containers/login/login.component.html
@@ -2,22 +2,11 @@
     ><div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-5">
-                <div class="card shadow-lg border-0 rounded-lg mt-5">
-                    <div class="card-header"><h3 class="text-center font-weight-light my-4">Login</h3></div>
-                    <div class="card-body">
-                        <form>
-                            <div class="form-group"><label class="small mb-1" for="inputEmailAddress">Email</label><input class="form-control py-4" id="inputEmailAddress" type="email" placeholder="Enter email address" /></div>
-                            <div class="form-group"><label class="small mb-1" for="inputPassword">Password</label><input class="form-control py-4" id="inputPassword" type="password" placeholder="Enter password" /></div>
-                            <div class="form-group">
-                                <div class="custom-control custom-checkbox"><input class="custom-control-input" id="rememberPasswordCheck" type="checkbox" /><label class="custom-control-label" for="rememberPasswordCheck">Remember password</label></div>
-                            </div>
-                            <div class="form-group d-flex align-items-center justify-content-between mt-4 mb-0"><a class="small" routerLink="/auth/forgot-password">Forgot Password?</a><a class="btn btn-primary" routerLink="/dashboard">Login</a></div>
-                        </form>
-                    </div>
-                    <div class="card-footer text-center">
-                        <div class="small"><a routerLink="/auth/register">Need an account? Sign up!</a></div>
-                    </div>
-                </div>
+                <form class="form-inline justify-content-between" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+                    <input class="form-control py-4 mr-2 my-2 flex" id="inputPassword" data-cy="passwordInput" type="password" formControlName="password" [class.is-valid]="passwordControlValid" [class.is-invalid]="passwordControlInvalid" /><button class="btn btn-primary flex" data-cy="loginButton" type="submit" [disabled]="loginForm.invalid">Login</button>
+                    <div class="invalid-feedback" *ngIf='passwordControl.hasError("required")'>Password required.</div>
+                    <div class="invalid-feedback" *ngIf='passwordControl.hasError("minlength")'>Password must be at least 8 characters.</div>
+                </form>
             </div>
         </div>
     </div></sb-layout-auth
