--- a/src/modules/navigation/layouts/layout-auth/layout-auth.component.pug
+++ b/src/modules/navigation/layouts/layout-auth/layout-auth.component.pug
@@ -1,6 +1,4 @@
-#layoutAuthentication.bg-primary
+#layoutAuthentication
     #layoutAuthentication_content
         main
             ng-content
-    #layoutAuthentication_footer
-        sb-footer
