--- a/src/modules/auth/containers/login/login.component.scss
+++ b/src/modules/auth/containers/login/login.component.scss
@@ -1,1 +1,11 @@
 @import 'styles/variables.scss';
+
+:host {
+    form {
+        margin-top: calc(100vh / 4);
+    }
+}
+
+#inputPassword {
+    flex: .9 0 auto;
+}
