top-nav shows to edit or create if logged in

--- a/src/modules/navigation/containers/top-nav/top-nav.component.html
+++ b/src/modules/navigation/containers/top-nav/top-nav.component.html
@@ -5,6 +5,8 @@
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item"><a class="nav-link" routerLink="/">Home</a></li>
                 <li class="nav-item"><a class="nav-link" routerLink="/about">About</a></li>
+                <li class="nav-item" *ngIf="isLoggedIn &amp;&amp; isOnPost"><a class="nav-link" routerLink="/about">Edit</a></li>
+                <li class="nav-item" *ngIf="isLoggedIn"><a class="nav-link" routerLink="/about">New Post</a></li>
             </ul>
         </div>
     </div>
