started new-post page

--- a/src/modules/blog/containers/new-post/new-post.component.scss
+++ b/src/modules/blog/containers/new-post/new-post.component.scss
@@ -1,6 +1,12 @@
 @import 'styles/variables.scss';
 
-#layoutAuthentication {
+
+.full-background {
     background-color: $background-grey;
+    width: 100vw;
     height: 100vh;
+}
+
+#newPostForm {
+    margin-top: 100px;
 }
