--- a/src/modules/navigation/containers/top-nav/top-nav.component.html
+++ b/src/modules/navigation/containers/top-nav/top-nav.component.html
@@ -6,7 +6,7 @@
                 <li class="nav-item"><a class="nav-link" routerLink="/">Home</a></li>
                 <li class="nav-item"><a class="nav-link" routerLink="/about">About</a></li>
                 <li class="nav-item" *ngIf="isLoggedIn &amp;&amp; isOnPost"><a class="nav-link" routerLink="/about">Edit</a></li>
-                <li class="nav-item" *ngIf="isLoggedIn"><a class="nav-link" routerLink="/about">New Post</a></li>
+                <li class="nav-item" *ngIf="isLoggedIn"><a class="nav-link" routerLink="/new">New Post</a></li>
             </ul>
         </div>
     </div>
