--- a/src/modules/blog/containers/new-post/new-post.component.html
+++ b/src/modules/blog/containers/new-post/new-post.component.html
@@ -15,17 +15,19 @@
                         <div class="invalid-feedback" *ngIf='subHeadingControl.hasError("subHeading")'>Subheading is not valid.</div>
                     </div>
                     <div class="form-group">
-                        <input class="form-control form-control-solid py-4" id="backgroundImageInput" data-cy="backgroundImageInput" type="text" placeholder="Background Image" formControlName="backgroundImage" [class.is-valid]="backgroundImageControlValid" [class.is-invalid]="backgroundImageControlInvalid" />
+                        <input class="form-control form-control-solid py-4" id="backgroundImageInput" data-cy="backgroundImageInput" type="text" placeholder="Background Image Url" formControlName="backgroundImage" [class.is-valid]="backgroundImageControlValid" [class.is-invalid]="backgroundImageControlInvalid" />
                         <div class="invalid-feedback" *ngIf='backgroundImageControl.hasError("required")'>Background Image required.</div>
                         <div class="invalid-feedback" *ngIf='backgroundImageControl.hasError("backgroundImage")'>Background Image is not valid.</div>
                     </div>
                     <div class="form-group">
-                        <input class="form-control form-control-solid py-4" id="bodyInput" data-cy="bodyInput" type="text" placeholder="Body" formControlName="body" [class.is-valid]="bodyControlValid" [class.is-invalid]="bodyControlInvalid" />
+                        <textarea class="p-4" id="bodyInput" autosize data-cy="bodyInput" placeholder="Body" formControlName="body" [class.is-valid]="bodyControlValid" [class.is-invalid]="bodyControlInvalid"></textarea>
                         <div class="invalid-feedback" *ngIf='bodyControl.hasError("required")'>Body required.</div>
                         <div class="invalid-feedback" *ngIf='bodyControl.hasError("body")'>Body is not valid.</div>
                     </div>
                     <div class="form-group d-flex align-items-center justify-content-between"><button class="btn btn-primary" data-cy="createButton" type="submit" [disabled]="newPostForm.invalid">Create</button></div>
                 </form>
+                <h2>Preview</h2>
+                <markdown class="p-4" id="newPostPreview" [data]="bodyControl.value"></markdown>
             </div>
         </div>
     </div>
