--- a/src/modules/blog/containers/new-post/new-post.component.scss
+++ b/src/modules/blog/containers/new-post/new-post.component.scss
@@ -4,9 +4,19 @@
 .full-background {
     background-color: $background-grey;
     width: 100vw;
-    height: 100vh;
+    min-height: 100vh;
 }
 
 #newPostForm {
     margin-top: 100px;
+}
+
+#bodyInput {
+    width: 100%;
+}
+
+#newPostPreview {
+    width: 100%;
+    display: block;
+    background-color: white;
 }
