adding new post

--- a/src/modules/blog/containers/new-post/new-post.component.pug
+++ b/src/modules/blog/containers/new-post/new-post.component.pug
@@ -5,70 +5,4 @@ sb-top-nav
         .row
             .col-lg-8.col-md-10.mx-auto
                             
-                form#newPostForm([formGroup]='newPostForm', (ngSubmit)='onSubmit()')
-                    .form-group
-                        input#headingInput.form-control.form-control-solid.py-4(
-                            data-cy='headingInput',
-                            type='text',
-                            placeholder='Heading',
-                            formControlName='heading',
-                            [class.is-valid]='headingControlValid',
-                            [class.is-invalid]='headingControlInvalid'
-                        )
-                        .invalid-feedback(*ngIf='headingControl.hasError("required")')
-                            | Heading required.
-                        .invalid-feedback(*ngIf='headingControl.hasError("heading")')
-                            | Heading is not valid.
-
-                    .form-group
-                        input#subHeadingInput.form-control.form-control-solid.py-4(
-                            data-cy='subHeadingInput',
-                            type='text',
-                            placeholder='Subheading',
-                            formControlName='subHeading',
-                            [class.is-valid]='subHeadingControlValid',
-                            [class.is-invalid]='subHeadingControlInvalid'
-                        )
-                        .invalid-feedback(*ngIf='subHeadingControl.hasError("required")')
-                            | Subheading required.
-                        .invalid-feedback(*ngIf='subHeadingControl.hasError("subHeading")')
-                            | Subheading is not valid.
-
-                    .form-group
-                        input#backgroundImageInput.form-control.form-control-solid.py-4(
-                            data-cy='backgroundImageInput',
-                            type='text',
-                            placeholder='Background Image Url',
-                            formControlName='backgroundImage',
-                            [class.is-valid]='backgroundImageControlValid',
-                            [class.is-invalid]='backgroundImageControlInvalid'
-                        )
-                        .invalid-feedback(*ngIf='backgroundImageControl.hasError("required")')
-                            | Background Image required.
-                        .invalid-feedback(*ngIf='backgroundImageControl.hasError("backgroundImage")')
-                            | Background Image is not valid.
-
-                    .form-group
-                        textarea#bodyInput.p-4(
-                            autosize,
-                            data-cy='bodyInput',
-                            placeholder='Body',
-                            formControlName='body',
-                            [class.is-valid]='bodyControlValid',
-                            [class.is-invalid]='bodyControlInvalid'
-                        )
-                        .invalid-feedback(*ngIf='bodyControl.hasError("required")')
-                            | Body required.
-                        .invalid-feedback(*ngIf='bodyControl.hasError("body")')
-                            | Body is not valid.
-
-                    .form-group.d-flex.align-items-center.justify-content-between
-                        button.btn.btn-primary(
-                            data-cy='createButton',
-                            type='submit',
-                            [disabled]='newPostForm.invalid'
-                        ) Create
-                
-                h2 Preview
-
-                markdown#newPostPreview.p-4([data]='bodyControl.value')
+                sb-post-form
