--- a/src/modules/navigation/containers/top-nav/top-nav.component.html
+++ b/src/modules/navigation/containers/top-nav/top-nav.component.html
@@ -5,7 +5,7 @@
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item"><a class="nav-link" routerLink="/">Home</a></li>
                 <li class="nav-item"><a class="nav-link" routerLink="/about">About</a></li>
-                <li class="nav-item" *ngIf="isLoggedIn &amp;&amp; isOnPost"><a class="nav-link" routerLink="/about">Edit</a></li>
+                <li class="nav-item" *ngIf="isLoggedIn &amp;&amp; isOnPost"><a class="nav-link pointer" (click)="editPost()">Edit</a></li>
                 <li class="nav-item" *ngIf="isLoggedIn"><a class="nav-link" routerLink="/new">New Post</a></li>
             </ul>
         </div>
