added cross-env, enabled ivy, added edit post button on post page.

--- a/src/modules/blog/containers/post/post.component.html
+++ b/src/modules/blog/containers/post/post.component.html
@@ -3,7 +3,7 @@
     <article>
         <div class="container">
             <div class="row">
-                <div class="col-lg-8 col-md-10 mx-auto"><markdown ngPreserveWhitespaces>{{post.body}}</markdown></div>
+                <div class="col-lg-8 col-md-10 mx-auto"><markdown ngPreserveWhitespaces>{{post.body}}</markdown><button class="btn btn-primary" type="button" (click)="editPost()">Edit Post</button></div>
             </div>
         </div>
     </article></sb-layout-blog
