--- a/src/modules/blog/components/post-form/post-form.component.html
+++ b/src/modules/blog/components/post-form/post-form.component.html
@@ -1,25 +1,28 @@
-<form id="newPostForm" [formGroup]="newPostForm" (ngSubmit)="onSubmit()">
+<form class="mb-5" id="newPostForm" [formGroup]="newPostForm" (ngSubmit)="onSubmit()">
+    <h2 class="text-white mb-4">Post Content</h2>
     <div class="form-group">
-        <input class="form-control form-control-solid py-4" id="headingInput" data-cy="headingInput" type="text" placeholder="Heading" formControlName="heading" [class.is-valid]="headingControlValid" [class.is-invalid]="headingControlInvalid" />
-        <div class="invalid-feedback" *ngIf='headingControl.hasError("required")'>Heading required.</div>
-        <div class="invalid-feedback" *ngIf='headingControl.hasError("heading")'>Heading is not valid.</div>
+        <input class="form-control py-4" id="headingInput" data-cy="headingInput" type="text" placeholder="Post heading" formControlName="heading" [class.is-valid]="headingControlValid" [class.is-invalid]="headingControlInvalid" />
+        <div class="invalid-feedback" *ngIf='headingControl.hasError("required")'>Heading required</div>
+        <div class="invalid-feedback" *ngIf='headingControl.hasError("heading")'>Heading is not valid</div>
     </div>
     <div class="form-group">
-        <input class="form-control form-control-solid py-4" id="subHeadingInput" data-cy="subHeadingInput" type="text" placeholder="Subheading" formControlName="subHeading" [class.is-valid]="subHeadingControlValid" [class.is-invalid]="subHeadingControlInvalid" />
-        <div class="invalid-feedback" *ngIf='subHeadingControl.hasError("required")'>Subheading required.</div>
-        <div class="invalid-feedback" *ngIf='subHeadingControl.hasError("subHeading")'>Subheading is not valid.</div>
+        <input class="form-control py-4" id="subHeadingInput" data-cy="subHeadingInput" type="text" placeholder="Post subheading" formControlName="subHeading" [class.is-valid]="subHeadingControlValid" [class.is-invalid]="subHeadingControlInvalid" />
+        <div class="invalid-feedback" *ngIf='subHeadingControl.hasError("required")'>Subheading required</div>
+        <div class="invalid-feedback" *ngIf='subHeadingControl.hasError("subHeading")'>Subheading is not valid</div>
     </div>
     <div class="form-group">
-        <input class="form-control form-control-solid py-4" id="backgroundImageInput" data-cy="backgroundImageInput" type="text" placeholder="Background Image Url" formControlName="backgroundImage" [class.is-valid]="backgroundImageControlValid" [class.is-invalid]="backgroundImageControlInvalid" />
-        <div class="invalid-feedback" *ngIf='backgroundImageControl.hasError("required")'>Background Image required.</div>
-        <div class="invalid-feedback" *ngIf='backgroundImageControl.hasError("backgroundImage")'>Background Image is not valid.</div>
+        <input class="form-control py-4" id="backgroundImageInput" data-cy="backgroundImageInput" type="text" placeholder="Post background image (enter a URL)" formControlName="backgroundImage" [class.is-valid]="backgroundImageControlValid" [class.is-invalid]="backgroundImageControlInvalid" />
+        <div class="form-text text-white-50">Use an image URL (ex. https://source.unsplash.com/WLUHO9A_xik/1600x900)</div>
+        <div class="invalid-feedback" *ngIf='backgroundImageControl.hasError("required")'>Background image required</div>
+        <div class="invalid-feedback" *ngIf='backgroundImageControl.hasError("backgroundImage")'>Background image is not valid</div>
     </div>
     <div class="form-group">
-        <textarea class="p-4" id="bodyInput" autosize data-cy="bodyInput" placeholder="Body" formControlName="body" [class.is-valid]="bodyControlValid" [class.is-invalid]="bodyControlInvalid"></textarea>
-        <div class="invalid-feedback" *ngIf='bodyControl.hasError("required")'>Body required.</div>
-        <div class="invalid-feedback" *ngIf='bodyControl.hasError("body")'>Body is not valid.</div>
+        <textarea class="form-control py-3" id="bodyInput" autosize data-cy="bodyInput" placeholder="Post body text (markdown supported)" formControlName="body" [class.is-valid]="bodyControlValid" [class.is-invalid]="bodyControlInvalid"></textarea>
+        <div class="form-text text-white-50"><fa-icon class="mr-1" [icon]='["fab", "markdown"]'></fa-icon>Markdown supported</div>
+        <div class="invalid-feedback" *ngIf='bodyControl.hasError("required")'>Body content required</div>
+        <div class="invalid-feedback" *ngIf='bodyControl.hasError("body")'>Body content is not valid</div>
     </div>
-    <div class="form-group d-flex align-items-center justify-content-between"><button class="btn btn-primary" *ngIf="!post" data-cy="createButton" type="submit" [disabled]="newPostForm.invalid">Create</button><button class="btn btn-primary" *ngIf="post" data-cy="updateButton" type="submit" [disabled]="newPostForm.invalid">Update</button></div>
+    <div class="form-group d-flex align-items-center justify-content-between"><button class="btn btn-primary" *ngIf="!post" data-cy="createButton" type="submit" [disabled]="newPostForm.invalid">Create Post</button><button class="btn btn-primary" *ngIf="post" data-cy="updateButton" type="submit" [disabled]="newPostForm.invalid">Update Post</button></div>
 </form>
-<h2>Preview</h2>
+<h2 class="text-white mb-4">Post Preview</h2>
 <markdown class="p-4" id="newPostPreview" [data]="bodyControl.value"></markdown>
