--- a/src/modules/navigation/layouts/layout-auth/layout-auth.component.scss
+++ b/src/modules/navigation/layouts/layout-auth/layout-auth.component.scss
@@ -1,6 +1,6 @@
 @import 'styles/variables.scss';
 
 #layoutAuthentication {
-    background-color: $background-grey;
+    background-color: $gray-900;
     height: 100vh;
 }
