--- a/src/styles/clean-blog/_variables.scss
+++ b/src/styles/clean-blog/_variables.scss
@@ -49,3 +49,6 @@ $pre-margin-x: 0;
 $pre-margin-y: 0.5rem;
 $pre-padding-x: 1rem;
 $pre-padding-y: 1.5rem;
+
+$border-radius: 0;
+$input-border-width: 0;
