--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -7,3 +7,14 @@
 .pointer {
     cursor: pointer;
 }
+
+.full-background {
+    background-color: $gray-800;
+    width: 100vw;
+    min-height: 100vh;
+}
+
+#mainNav .btn {
+    font-size: 0.75rem;
+    padding: 0.75rem 1rem;
+}
