--- a/src/modules/blog/containers/edit-post/edit-post.component.pug
+++ b/src/modules/blog/containers/edit-post/edit-post.component.pug
@@ -8,3 +8,5 @@ sb-top-nav
             .col-lg-8.col-md-10.mx-auto
                             
                 sb-post-form([post]='post')
+
+                button.btn.btn-danger.mb-5 Delete Post
