add padding to bottom of full background for edit pages

--- a/src/modules/blog/containers/edit-post/edit-post.component.pug
+++ b/src/modules/blog/containers/edit-post/edit-post.component.pug
@@ -9,4 +9,4 @@ sb-top-nav
                             
                 sb-post-form([post]='post')
 
-                button.btn.btn-danger.mb-5 Delete Post
+                button.btn.btn-danger Delete Post
