--- a/src/modules/blog/containers/edit-post/edit-post.component.html
+++ b/src/modules/blog/containers/edit-post/edit-post.component.html
@@ -2,7 +2,7 @@
 <div class="full-background">
     <div class="container" *ngIf="(post$ | async) as post;">
         <div class="row">
-            <div class="col-lg-8 col-md-10 mx-auto"><sb-post-form [post]="post"></sb-post-form><button class="btn btn-danger">Delete Post</button></div>
+            <div class="col-lg-8 col-md-10 mx-auto"><sb-post-form [post]="post"></sb-post-form></div>
         </div>
     </div>
 </div>
